# GitGoida

./: CMakeLists.txt  LICENSE.txt  README.md  gitcringe.1  gitcringe.1.adoc  gitcringe_completion.bash
include/: gitcringe.hpp
src/: cmd_add.cpp  cmd_branch.cpp  cmd_commit.cpp  cmd_diff.cpp  cmd_exec.cpp  cmd_help.cpp  cmd_init.cpp  cmd_log.cpp  cmd_merge.cpp  cmd_show.cpp  cmd_squash.cpp  cmd_status.cpp  cmd_switch.cpp  main.cpp  repo.cpp
